# compath-resources

./: .bumpversion.cfg  .flake8  .travis.yml  LICENSE  MANIFEST.in  README.rst  kegg_wikipathways.xlsx  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: index.md
docs/data/: compath.tsv
mappings/: README.rst  compath_mappings.rdf  decopath.tsv  decopath_ontology.xlsx  kegg_reactome.csv  kegg_reactome.xlsx  kegg_wikipathways.csv  kegg_wikipathways.xlsx  pathbank_kegg.csv  pathbank_reactome.csv  pathbank_wikipathways.csv  reactome_hierarchy.csv  reactome_hierarchy.tsv  special_mappings.csv  special_mappings.xlsx  wikipathways_reactome.csv  wikipathways_reactome.xlsx
mappings/neurommsig/: README.rst  ad_neurommsig_pathway_dbs.tsv  pd_neurommsig_pathway_dbs.tsv
notebooks/: ComPath RDF.ipynb  Common pathways across databases.ipynb  Distribution comparison.ipynb  Gene centric coverage of Pathway Databases.ipynb  Generate Reactome Hierarchy.ipynb  Mappings Similarity Analysis.ipynb  Pathways without mappings.ipynb  README.rst  Similarity analysis in mapped pathways.ipynb  Statistics Pathway Sizes.ipynb
notebooks/curation_template/: Gene based mapping.ipynb  Pathway name based mapping.ipynb  README.rst
notebooks/visualization/: Clustergrammer.ipynb  Cytoscape pathway similarity network.ipynb  Dendrogram.ipynb  README.rst
src/compath_resources/: __init__.py  __main__.py  cli.py  constants.py  convert_decopath.py  curation.py  import_mappings.py  manager.py  parser.py  pathway_size_statistics.py  summarize.py  sync.py  upload_ndex.py  utils.py
src/compath_resources/exporters/: __init__.py  bel.py  rdf.py
src/compath_resources/rdf/: namespaces.py
src/compath_resources/resources/: __init__.py  decopath.tsv  kegg_reactome.tsv  kegg_wikipathways.tsv  pathbank_kegg.tsv  pathbank_reactome.tsv  pathbank_wikipathways.tsv  reactome_hierarchy.tsv  special_mappings.tsv  wikipathways_reactome.tsv
tests/: test_decopath_export.py  test_integrity.py
