##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = compath_resources
version = 0.0.5
url = https://github.com/compath/resources
author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
license = MIT
license_file = LICENSE
description = ComPath Resource Utilities.
long_description = file: README.rst
keywords =
    KEGG
    Reactome
    WikiPathways
    Biological Networks
    Pathway Analysis
    Networks Biology

[options]
python_requires = >=3.6
zip-safe = false
install_requires =
    pybel>=0.12.0
    click
    pandas
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compath-resources = compath_resources.cli:main

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
