##########################
# Setup.py Configuration #
##########################
[metadata]
name = compath_resources
version = 0.0.9-dev
description = ComPath Resource Utilities.
long_description = file: README.rst

license = MIT
license_file = LICENSE

url = https://github.com/compath/compath-resources

author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
keywords =
    KEGG
    Reactome
    WikiPathways
    Biological Networks
    Pathway Analysis
    Networks Biology

[options]
python_requires = >=3.7
zip-safe = false
install_requires =
    pybel>=0.14.0,<0.15.0
    bio2bel>=0.3.0,<0.4.0
    click
    pandas
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
rdf =
    rdflib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compath-resources = compath_resources.cli:main
bio2bel =
    compath = compath_resources
