##########################
# Setup.py Configuration #
##########################
[metadata]
name = compath_resources
version = 0.1.1
description = ComPath Resource Utilities
long_description = file: README.rst

license = MIT
license_file = LICENSE

url = https://github.com/compath/compath-resources
download_url = https://github.com/compath/compath-resources/releases
project_urls =
    Bug Tracker = https://github.com/compath/compath-resources/issues

author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Daniel Domingo-Fernández
maintainer_email = daniel.domingo.fernandez@scai.fraunhofer.de

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
keywords =
    KEGG
    Reactome
    WikiPathways
    PathBank
    Biological Networks
    Pathway Analysis
    Networks Biology

[options]
python_requires = >=3.7
include_package_data = True
zip-safe = false
install_requires =
    pybel
    bio2bel
    click
    pandas
    pystow
    xlrd
    seaborn
    matplotlib
    more_click
    bioregistry
    openpyxl

packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
rdf =
    rdflib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compath-resources = compath_resources.cli:main
bio2bel =
    compath = compath_resources
